Бодаюся з попередженнями. Залищилися лише повʼязані з Page - Не вказую, що це List